--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "token":"aaaaaaaaaaaaaa",
+  "AllowedHosts": "*",
+  "token":"ew6Z1t4kCf7gzpRu9XxcPv",
   "URL_Padrao": "https://brapi.dev/api/",
   "ConnectionStrings": {
-    "ConexaoBanco": "Server=localhost;Database=pi5;Trusted_Connection=True;MultipleActiveResultSets=true;user=sa;password=123456;TrustServerCertificate=true;"
+    "ConexaoBanco": "Server=localhost;Database=pi5;Trusted_Connection=True;MultipleActiveResultSets=true;user=sa;password=Senha13n;TrustServerCertificate=true;"
   }
 }
